# msds-scraper

./: .gitignore  Makefile  README.md  credentials.json  pyproject copy.toml  pyproject.toml  pytest.ini  quickstart.py  setup.py  token.json
msds_scraper/: __main__.py  cli.py  combiblocks.py  fischer.py  io.py  msds_scraper.py  requirements.txt  setup.py  utils.py
msds_scraper/tests/: test_cli.py
msds_scraper/tests/data/: InventoryExport.xlsx
tests/: test_cli.py  test_combiblocks.py  test_fischer.py  test_io.py  test_utils.py
tests/cassettes/: test__get_fischer.yaml  test__get_fischer_strips.yaml  test__get_fischer_strips_no_headers.yaml  test_cli.yaml  test_get_cas_pdf_bad_cas.yaml  test_get_cas_pdf_good_cas.yaml  test_get_fischer_msds_link_bad_cas.yaml  test_get_fischer_msds_link_good_cas.yaml
tests/cassettes/test_cli/: test_cli.yaml
tests/cassettes/test_combiblocks/: test_combiblocks_search.yaml  test_combiblocks_search_good_cas.yaml  test_get_cas_pdf_bad_cas.yaml  test_get_cas_pdf_good_cas.yaml  test_get_catalog_num_bad_cas.yaml  test_get_catalog_num_good_cas.yaml
tests/cassettes/test_fischer/: test__get_fischer.yaml  test__get_fischer_strips.yaml  test__get_fischer_strips_no_headers.yaml  test_get_cas_pdf_bad_cas.yaml  test_get_cas_pdf_good_cas.yaml  test_get_fischer_msds_link_bad_cas.yaml  test_get_fischer_msds_link_good_cas.yaml
tests/data/: InventoryExport.xlsx  bad-cas.csv
